# ship

./: Cargo.toml  LICENSE  TODO  ship.toml
docs/: DOCS.md
src/: appimage.rs  conf.rs  deb.rs  gen_.rs  main.rs
